--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "copy": "^0.3.1",
+    "command-line-test": "^1.0.10",
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
     "gitbook-cli": "^2.3.0",
@@ -86,7 +87,8 @@
     "release:patch": "node ./scripts/bump.js --stage=patch",
     "release:pre": "node ./scripts/bump.js --stage=prerelease",
     "serve": "gitbook install && ./scripts/docs.js && gitbook serve",
-    "test:spec": "mocha",
+    "test:spec": "mocha test/unit/**/*.spec.js plugins/**/test/unit/**/*.spec.js",
+    "test:functional": "mocha test/functional/**/*.spec.js plugins/**/test/functional/**/*.spec.js",
     "test": "yarn lint && yarn test:spec"
   }
 }
